--- a/vinyl_records_website.html
+++ b/vinyl_records_website.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Vintage Vinyl Records</title>
+    <title>Used Vinyl Records</title>
     <style>
         body {
             background-color: #1a1a1a;
